@@ -1,5 +1,8 @@
 # Unreleased
 
+- Update `typing_extensions.dataclass_transform` to rename the
+  `field_descriptors` parameter to `field_specifiers` and accept
+  arbitrary keyword arguments.
 - Add `typing_extensions.get_overloads` and
   `typing_extensions.clear_overloads`, and add registry support to
   `typing_extensions.overload`. Backport from python/cpython#89263.
